--- a/templates/search_again.html
+++ b/templates/search_again.html
@@ -1,5 +1,8 @@
 <html>
-<h1>Wardrobe Mix</h1>
+<head>
+	<title>Polyfind</title>
+</head>
+<h1>Polyfind</h1>
 <body>
 	<h2>Your query did not return any results. Please search again.</h2>
 	<center><form name="input" action="{{ url_for("search") }}" method="get">
