--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,32 @@
 <html>
-
-<h1>Polyfind</h1>
+<head>
+    <link href='http://fonts.googleapis.com/css?family=Comfortaa:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Codystar' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <title>Polyfind</title>
+</head>
 <body>
+    <div>
+        <h1>Polyfind</h1>
+    </div>
+    <div>
 	<p><i>Love a unique piece of clothing, but not sure how to wear it? <br>Find out how others have styled it before it becomes another artifact in your closet. <br>Use one of the search boxes below to find related sets! </i></p>
-	<form name="input" action="{{ url_for("search") }}" method="get">
-	<big>What do I wear with<input type="text" name="q" /></big><input type="submit" value="Submit">?<br />
+	<form name="input" action="{{ url_for("search") }}" method="get" id="searchbox">
+	<input type="text" name="q" id="search" value="Search by item"/><input type="submit" value="Submit" id="submit"><br />
 	</form>
-	<form name="input" action="{{ url_for("search") }}" method="get">
-	<big>Enter a barcode:<input type="text" name="q" /></big><input type="submit" value="Submit"><br />
+	<form name="input" action="{{ url_for("search") }}" method="get" id="searchbox">
+	<input type="text" name="q" id="search" value="Search by barcode" /><input type="submit" value="Submit" id="submit"><br />
 	</form>
-    <form name="input" action="{{ url_for("search") }}" method="get">
-    <big>Enter a theme (ex: "Bonnie and Clyde" or "business attire"):<input type="text" name="q" /></big><input type="submit" value="Submit"><br />
+    <form name="input" action="{{ url_for("search") }}" method="get" id="searchbox">
+    <input type="text" name="q" id="search" value="Search by theme or event: (ex: 'Bonnie and Clyde' or 'cocktail party')"/><input type="submit" value="Submit" id="submit"><br />
     </form>
-    <form name="input" action="{{ url_for("search") }}" method="get">
-    <big>Enter an event: (ex: "cocktail party" or "job interview"):<input type="text" name="q" /></big><input type="submit" value="Submit"><br />
+    <form name="input" action="{{ url_for("search") }}" method="get" id="searchbox">
+    <input type="text" name="q" id="search" value="Search by style icon: (ex: 'Audrey Hepburn')" /><input type="submit" value="Submit" id="submit"><br />
     </form>
 	<p><i>For more search results, enter fewer search terms. For more exact results, put quotes around search terms. ex: "black peeptoe wedge"</i></p>
+    </div>
+    <div class=bottom>
+    </div>
 </body>
 </html>
