--- a/templates/search_again.html
+++ b/templates/search_again.html
@@ -1,13 +1,20 @@
 <html>
 <head>
-	<title>Polyfind</title>
+    <link href='http://fonts.googleapis.com/css?family=Comfortaa:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Codystar' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <title>Polyfind</title>
 </head>
-<h1>Polyfind</h1>
 <body>
+	<h1>Polyfind</h1>
 	<h2>Your query did not return any results. Please search again.</h2>
-	<center><form name="input" action="{{ url_for("search") }}" method="get">
-	<big>What do I wear with<input type="text" name="q" /></big><input type="submit" value="Submit">?<br />
-	</form></center>
-	<b>TIP:</b> For more results, try searching with fewer or different terms. Searching for Chloe Purse may not return the same results as Chloe Handbag, Chloe Tote, or Chloe Bag. For precise results, use quotation marks (ex: "Chloe Saskia Bag")
+	<form name="input" action="{{ url_for("search") }}" method="get" id="searchbox">
+	<input type="text" name="q" id="search" value="Enter an item, barcode, theme or event"/><input type="submit" value="Submit" id="submit"><br />
+	</form>
+	<p><b>TIP:</b> For more results, try searching with fewer or different terms. Searching for Chloe Purse may not return the same results as Chloe Handbag, Chloe Tote, or Chloe Bag. For precise results, use quotation marks (ex: "Chloe Saskia Bag")<p>
+	</div>
+    <div class=bottom>
+    </div>
 </body>
 </html>
