--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Polyfind</h1>
+        <a href="/"><h1>Polyfind</h1></a>
     </div>
 	<h2>Here are some ideas:</h2>
 	<table class=test>
